Revert "Update azure-pipelines.yml for Azure Pipelines"
This reverts commit c0f27d975fd6d5708dc35fbe8d647aad831233f9.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ pr:
 variables:
   application.name: 'et-atos-api'
   azure.subscription.endpoint: 'hmcts-pet'
-  azure.container.registry: ''
+  azure.container.registry: 'employmenttribunal.azurecr.io'
 
 jobs:
 - job: testApp
