--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -86,6 +86,8 @@ jobs:
       repo_sha=$(git rev-parse --verify HEAD)
       docker_image_tag_sha=${repo_sha:0:7}
       echo "##vso[task.setvariable variable=DOCKER_TAG;isOutput=true]$(Build.SourceBranchName)-${docker_image_tag_sha}"
+      echo "ACR:"
+      echo $(azure.container.registry)
     displayName: 'Get Docker Tag'
     name: 'getDockerTag'
 
