--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,8 +87,11 @@ jobs:
       docker_image_tag_sha=${repo_sha:0:7}
       echo "##vso[task.setvariable variable=DOCKER_TAG;isOutput=true]$(Build.SourceBranchName)-${docker_image_tag_sha}"
       echo "ACR:"
-      echo $(azure.container.registry)
+      echo $AZURE_CONTAINER_REGISTRY
     displayName: 'Get Docker Tag'
+      parameters:
+          service: $(service)
+          environment: $(environment)
     name: 'getDockerTag'
 
   - task: Docker@1
