--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,7 +101,7 @@ jobs:
       imageName: '$(application.name):$(getDockerTag.DOCKER_TAG)'
       azureSubscriptionEndpoint: '$(azure.subscription.endpoint)'
       azureContainerRegistry: $(azure.container.registry)
-      arguments: '--build-arg APPVERSION=$(getDockerTag.DOCKER_TAG) APP_BUILD_TAG=$(SourceBranchName)-$(Build.SourceVersion)$(rev:.r) APP_GIT_COMMIT=$(Build.SourceVersion) APP_BUILD_DATE=$(Year:yyyy)-$(Month)-$(DayOfMonth)T$(Hours):$(Minutes):$(Seconds)'
+      arguments: '--build-arg APPVERSION=$(getDockerTag.DOCKER_TAG) APP_BUILD_TAG=$(Build.SourceBranchName)-$(Build.SourceVersion)$(Rev:.r) APP_GIT_COMMIT=$(Build.SourceVersion) APP_BUILD_DATE=$(Date:MMddyy)'
 
   - task: Docker@1
     displayName: 'Tag image'
