--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,9 +84,9 @@ jobs:
   - bash: |
       repo_sha=$(git rev-parse --verify HEAD)
       docker_image_tag_sha=${repo_sha:0:7}
-      current_date=${date +"%Y-%m-%d %T"}
+      DATE=$(date '+%d/%m/%Y %H:%M:%S') 
       echo "##vso[task.setvariable variable=DOCKER_TAG;isOutput=true]$(Build.SourceBranchName)-${docker_image_tag_sha}"
-      echo "##vso[task.setvariable variable=BUILD_DATE;isOutput=true]$(current_date)"
+      echo "##vso[task.setvariable variable=BUILD_DATE;isOutput=true]$DATE"
     displayName: 'Get Docker Tag'
     name: 'getDockerTag'
 
