--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,9 +84,7 @@ jobs:
   - bash: |
       repo_sha=$(git rev-parse --verify HEAD)
       docker_image_tag_sha=${repo_sha:0:7}
-      DATE=$(date '+%d/%m/%Y %H:%M:%S') 
       echo "##vso[task.setvariable variable=DOCKER_TAG;isOutput=true]$(Build.SourceBranchName)-${docker_image_tag_sha}"
-      echo "##vso[task.setvariable variable=BUILD_DATE;isOutput=true]$DATE"
     displayName: 'Get Docker Tag'
     name: 'getDockerTag'
 
@@ -103,7 +101,7 @@ jobs:
       imageName: '$(application.name):$(getDockerTag.DOCKER_TAG)'
       azureSubscriptionEndpoint: '$(azure.subscription.endpoint)'
       azureContainerRegistry: $(azure.container.registry)
-      arguments: '--build-arg APPVERSION=$(getDockerTag.DOCKER_TAG) --build-arg APP_BUILD_TAG=$(Build.SourceBranchName)-$(Build.SourceVersion) --build-arg APP_GIT_COMMIT=$(Build.SourceVersion) --build-arg APP_BUILD_DATE=$(getDockerTag.BUILD_DATE)'
+      arguments: '--build-arg APPVERSION=$(getDockerTag.DOCKER_TAG) --build-arg APP_BUILD_TAG=$(Build.SourceBranchName)-$(Build.SourceVersion) --build-arg APP_GIT_COMMIT=$(Build.SourceVersion)'
 
   - task: Docker@1
     displayName: 'Tag image'
