--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,6 @@ trigger:
   branches:
     include:
       - develop
-      - devops
 
 pr:
   autoCancel: true
@@ -24,59 +23,59 @@ variables:
   azure.subscription.endpoint: 'hmcts-pet'
 
 jobs:
-# - job: testApp
+- job: testApp
 
-#   pool:
-#     vmImage: 'Ubuntu-16.04'
+  pool:
+    vmImage: 'Ubuntu-16.04'
   
-#   steps:
-#   - task: UseRubyVersion@0
-#     inputs:
-#       versionSpec: '>= 2.5'
+  steps:
+  - task: UseRubyVersion@0
+    inputs:
+      versionSpec: '>= 2.5'
 
-#   - script: |
-#       export ENABLE_COVERAGE=true
-#       export DB_USERNAME=postgres
-#       export DB_PORT=5433
-#       export CC_TEST_REPORTER=935a4195bd35a993666acc398a01a53daf4e7f11635e90a51c8f30b44cbe1ec9
-#       sudo apt-get install libpq-dev mcrypt libmcrypt-dev pdftk
-#       chmod +x ./bin/wait-for-it.sh
-#       sudo rm /usr/local/bin/docker-compose
-#       curl -L https://github.com/docker/compose/releases/download/1.21.0/docker-compose-Linux-x86_64 > docker-compose
-#       chmod +x docker-compose
-#       sudo mv docker-compose /usr/local/bin
-#       curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter && chmod +x ./cc-test-reporter
-#       gem install bundler -v 1.16.4
-#     displayName: 'before install'
+  - script: |
+      export ENABLE_COVERAGE=true
+      export DB_USERNAME=postgres
+      export DB_PORT=5433
+      export CC_TEST_REPORTER=935a4195bd35a993666acc398a01a53daf4e7f11635e90a51c8f30b44cbe1ec9
+      sudo apt-get install libpq-dev mcrypt libmcrypt-dev pdftk
+      chmod +x ./bin/wait-for-it.sh
+      sudo rm /usr/local/bin/docker-compose
+      curl -L https://github.com/docker/compose/releases/download/1.21.0/docker-compose-Linux-x86_64 > docker-compose
+      chmod +x docker-compose
+      sudo mv docker-compose /usr/local/bin
+      curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter && chmod +x ./cc-test-reporter
+      gem install bundler -v 1.16.4
+    displayName: 'before install'
 
-#   - script: |
-#       export ENABLE_COVERAGE=true
-#       export DB_USERNAME=postgres
-#       export DB_PORT=5433
-#       ./bin/dev/docker-support-services up -d
-#       ./bin/wait-for-it.sh localhost:5433
-#       sleep 5
-#       ./bin/wait-for-it.sh localhost:5433
-#       RAILS_ENV=test bundle install && bundle exec rails db:create db:migrate
-#       curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-#       chmod +x ./cc-test-reporter
-#       ./cc-test-reporter before-build
-#     displayName: 'before script'
+  - script: |
+      export ENABLE_COVERAGE=true
+      export DB_USERNAME=postgres
+      export DB_PORT=5433
+      ./bin/dev/docker-support-services up -d
+      ./bin/wait-for-it.sh localhost:5433
+      sleep 5
+      ./bin/wait-for-it.sh localhost:5433
+      RAILS_ENV=test bundle install && bundle exec rails db:create db:migrate
+      curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+      chmod +x ./cc-test-reporter
+      ./cc-test-reporter before-build
+    displayName: 'before script'
 
-#   - script: |
-#       export ENABLE_COVERAGE=true
-#       export DB_USERNAME=postgres
-#       export DB_PORT=5433
-#       export CC_TEST_REPORTER=935a4195bd35a993666acc398a01a53daf4e7f11635e90a51c8f30b44cbe1ec9
-#       RAILS_ENV=test bundle install
-#       RAILS_ENV=test bundle exec rspec
-#       # RAILS_ENV=test bundle exec codeclimate-test-reporter
-#       # ./cc-test-reporter after-build --exit-code 0
-#     displayName: 'script'
+  - script: |
+      export ENABLE_COVERAGE=true
+      export DB_USERNAME=postgres
+      export DB_PORT=5433
+      export CC_TEST_REPORTER=935a4195bd35a993666acc398a01a53daf4e7f11635e90a51c8f30b44cbe1ec9
+      RAILS_ENV=test bundle install
+      RAILS_ENV=test bundle exec rspec
+      # RAILS_ENV=test bundle exec codeclimate-test-reporter
+      # ./cc-test-reporter after-build --exit-code 0
+    displayName: 'script'
 
 
 - job: BuildAndPushImage
-  # dependsOn: testApp
+  dependsOn: testApp
   pool:
     name: hmcts-pet
   steps:
