--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,7 @@ jobs:
       export DB_USERNAME=postgres
       export DB_PORT=5433
       export CC_TEST_REPORTER=935a4195bd35a993666acc398a01a53daf4e7f11635e90a51c8f30b44cbe1ec9
+      sudo apt-get update
       sudo apt-get install libpq-dev mcrypt libmcrypt-dev pdftk
       chmod +x ./bin/wait-for-it.sh
       sudo rm /usr/local/bin/docker-compose
