--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
 # Add steps that install rails, analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/ruby
 
-name: $(SourceBranchName)-$(Build.SourceVersion)$(rev:.r)
+name: '$(SourceBranchName)-$(Build.SourceVersion) Build-$(Build.BuildId)'
 
 trigger:
   batch: true
@@ -32,26 +32,18 @@ jobs:
   steps:
   - task: UseRubyVersion@0
     inputs:
-      versionSpec: '>= 2.5'
+      versionSpec: '>= 2.6'
 
   - script: |
-      export ENABLE_COVERAGE=true
       export DB_USERNAME=postgres
       export DB_PORT=5433
-      export CC_TEST_REPORTER=935a4195bd35a993666acc398a01a53daf4e7f11635e90a51c8f30b44cbe1ec9
       sudo apt-get update
       sudo apt-get install libpq-dev mcrypt libmcrypt-dev pdftk
       chmod +x ./bin/wait-for-it.sh
-      sudo rm /usr/local/bin/docker-compose
-      curl -L https://github.com/docker/compose/releases/download/1.21.0/docker-compose-Linux-x86_64 > docker-compose
-      chmod +x docker-compose
-      sudo mv docker-compose /usr/local/bin
-      curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter && chmod +x ./cc-test-reporter
-      gem install bundler -v 1.16.4
+      gem install bundler -v 1.17.3
     displayName: 'before install'
 
   - script: |
-      export ENABLE_COVERAGE=true
       export DB_USERNAME=postgres
       export DB_PORT=5433
       ./bin/dev/docker-support-services up -d
@@ -59,20 +51,13 @@ jobs:
       sleep 5
       ./bin/wait-for-it.sh localhost:5433
       RAILS_ENV=test bundle install && bundle exec rails db:create db:migrate
-      curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-      chmod +x ./cc-test-reporter
-      ./cc-test-reporter before-build
     displayName: 'before script'
 
   - script: |
-      export ENABLE_COVERAGE=true
       export DB_USERNAME=postgres
       export DB_PORT=5433
-      export CC_TEST_REPORTER=935a4195bd35a993666acc398a01a53daf4e7f11635e90a51c8f30b44cbe1ec9
       RAILS_ENV=test bundle install
       RAILS_ENV=test bundle exec rspec
-      # RAILS_ENV=test bundle exec codeclimate-test-reporter
-      # ./cc-test-reporter after-build --exit-code 0
     displayName: 'script'
 
 
