--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,14 +55,20 @@ jobs:
       export DB_USERNAME=postgres
       export DB_PORT=5433
       ./bin/dev/docker-support-services up -d
-      ./bin/wait-for-it.sh localhost:5433
+      ./bin/wait-for-it.sh localhost:5433 -t 120
       sleep 5
-      ./bin/wait-for-it.sh localhost:5433
+      ./bin/wait-for-it.sh localhost:5433 -t 120
+    displayName: 'before script - start database server'
+
+  - script: |
+      export ENABLE_COVERAGE=true
+      export DB_USERNAME=postgres
+      export DB_PORT=5433
       RAILS_ENV=test bundle install && bundle exec rails db:create db:migrate
       curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
       chmod +x ./cc-test-reporter
       ./cc-test-reporter before-build
-    displayName: 'before script'
+    displayName: 'before script - create and migrate database'
 
   - script: |
       export ENABLE_COVERAGE=true
