try using ms hosted pool

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -86,7 +86,7 @@ jobs:
   dependsOn: TestApplication
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/develop'))
   pool:
-    name: hmcts-pet
+    vmImage: 'Ubuntu-16.04'
   steps:
 
   - bash: |
@@ -135,7 +135,7 @@ jobs:
   dependsOn: TestApplication
   condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/develop'), eq(variables['Build.Reason'], 'Manual'))
   pool:
-    name: hmcts-pet  # name of the pool to run this job in
+    vmImage: 'Ubuntu-16.04'  # name of the pool to run this job in
   steps:
 
   - bash: |
